[gd_scene format=3 uid="uid://wbkiotglsl55"]

[ext_resource type="Script" uid="uid://c2h1mgucau3vn" path="res://scripts/artifacts/CameraController3D.cs" id="Camera3D"]
[ext_resource type="Script" uid="uid://dbkk6bjm6jxoi" path="res://scripts/systems/ArtifactModeler.gd" id="Modeler"]
[ext_resource type="Script" uid="uid://b2gtbhetru26s" path="res://scripts/artifacts/OpenSCADBridge.cs" id="OpenSCAD"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.15, 1)
ambient_light_source = 1
ambient_light_color = Color(0.3, 0.3, 0.3, 1)
tonemap_mode = 2

[node name="ArtifactModeler" type="Node3D" unique_id=850855582]
script = ExtResource("Modeler")

[node name="CameraController" type="Node3D" parent="." unique_id=2095843163]
script = ExtResource("Camera3D")

[node name="Camera" type="Camera3D" parent="CameraController" unique_id=1009073119]
fov = 60.0
near = 0.1
far = 1000.0

[node name="Grid3D" type="MeshInstance3D" parent="." unique_id=1574766816]

[node name="PrimitivesLayer" type="Node3D" parent="." unique_id=234309180]

[node name="CompiledMeshLayer" type="Node3D" parent="." unique_id=759842453]

[node name="GhostPreview" type="MeshInstance3D" parent="." unique_id=1470156740]
visible = false

[node name="SelectionIndicator" type="MeshInstance3D" parent="." unique_id=1050753610]
visible = false

[node name="Cursor3D" type="MeshInstance3D" parent="." unique_id=1097034507]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=549455421]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 15, 10)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=2029498288]
environment = SubResource("Environment_1")

[node name="OpenSCADBridge" type="Node" parent="." unique_id=626219715]
script = ExtResource("OpenSCAD")
